--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
     android:layout_marginLeft="25dp"
     android:layout_marginRight="25dp"
     android:layout_marginBottom="25dp"
+    android:gravity="center"
     tools:context=".MainActivity">
 
     <!-- Logo Aplikasi -->
@@ -49,7 +50,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/login"
-        android:layout_gravity="center_horizontal"
+        android:layout_gravity="center"
+        android:paddingLeft="24dp"
+        android:paddingRight="24dp"
         android:textColor="@android:color/white"
         android:layout_marginBottom="16dp"/>
 
@@ -62,5 +65,13 @@
         android:layout_gravity="center"
         android:clickable="true"
         android:focusable="true"/>
+
+    <!-- Error Message TextView -->
+    <TextView
+        android:id="@+id/tvErrorMessage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@android:color/holo_red_light"
+        android:visibility="gone"/>
 
 </LinearLayout>
