--- a/app/src/main/res/layout/item_layout_food.xml
+++ b/app/src/main/res/layout/item_layout_food.xml
@@ -25,7 +25,7 @@
             android:text="Food Name"
             android:textSize="18sp"
             android:textStyle="bold"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:layout_marginBottom="4dp"/>
 
         <!-- Deskripsi Makanan -->
